--- a/src/app/pages/job_seeker/home/home/home.component.html
+++ b/src/app/pages/job_seeker/home/home/home.component.html
@@ -10,6 +10,7 @@
             <nav class="flex space-x-6">
                 <a routerLink="#" class="text-black hover:text-purple-700 font-semibold">Home</a>
                 <a routerLink="/applied_jobs" class="text-black hover:text-purple-700 font-semibold">Applied-Jobs</a>
+                <a routerLink="/applied_accepted_jobs" class="text-black hover:text-purple-700 font-semibold">Accepted-Jobs</a>
                 <a routerLink="#" class="text-black hover:text-purple-700 font-semibold flex items-center">
                     Messages
                     <span class="bg-red-500 text-white text-xs ml-1 px-1 py-1 rounded-full">New</span>
