--- a/src/app/pages/job_provider/home/home/home.component.html
+++ b/src/app/pages/job_provider/home/home/home.component.html
@@ -25,26 +25,11 @@
     </header>
 
     <!-- Sidebar -->
+
     <div class="flex">
         <!-- Sidebar -->
-        <div class="w-64 bg-gray-900 h-screen p-6">
-            <!-- Button for Post Job -->
-            <button class="w-full bg-orange-500 text-white py-3 rounded mb-5 font-semibold hover:bg-orange-600">
-                <a routerLink="/create_job" class="w-full block text-white">Post Job +</a>
-            </button>
+        <app-side-bar></app-side-bar>
         
-            <!-- Sidebar Navigation Links -->
-            <ul>
-                <li class="mb-4">
-                    <a routerLink="/applications" class="text-white block py-2 px-4 rounded hover:bg-purple-300">Applications</a>
-                </li>
-                <li>
-                    <a routerLink="/sign-out" class="text-white block py-2 px-4 rounded hover:bg-purple-300">Sign Out</a>
-                </li>
-            </ul>
-        </div>
-        
-
         <!-- Main Content -->
         <div class="flex-1 p-8">
             <!-- Search and Filter -->
