--- a/src/app/pages/job_provider/jobs/create-job/create-job.component.html
+++ b/src/app/pages/job_provider/jobs/create-job/create-job.component.html
@@ -6,7 +6,7 @@
             <div class="logo text-3xl font-bold text-purple-700">Vocatex</div>
             <nav class="flex space-x-6">
                 <a routerLink="/job_provider_home" class="text-black hover:text-purple-700 font-semibold">Home</a>
-                <a href="#" class="text-black hover:text-purple-700 font-semibold">Jobs</a>
+                <a  routerLink="/job_provider_home" class="text-black hover:text-purple-700 font-semibold">Jobs</a>
             </nav>
             <div class="flex items-center space-x-4">
                 <span class="text-purple-700 font-medium">Abhishek</span>
