--- a/src/app/models/search-result-modal/search-result-modal.component.html
+++ b/src/app/models/search-result-modal/search-result-modal.component.html
@@ -26,6 +26,10 @@
       <p class="text-blue-900 text-center font-medium">
         You want to apply for this job? Please <a routerLink="/job_seeker_login" class="text-blue-600 hover:underline font-bold">log in</a>.
       </p>
+      <p class="text-blue-900 text-center font-medium mt-2">
+        Or, go to the <a routerLink="/job_seeker_home" class="text-blue-600 hover:underline font-bold">Jobs Page</a> to explore and apply for more opportunities.
+      </p>
     </div>
+    
   </div>
 </div>
