--- a/src/app/pages/job_provider/auth/login/login.component.html
+++ b/src/app/pages/job_provider/auth/login/login.component.html
@@ -75,7 +75,7 @@
                 <!-- Register Link -->
                 <div class="text-center">
                     <p class="text-sm text-black-600">New to Vocatex? 
-                        <a routerLink="/job_seeker_register" class="text-purple-700 hover:underline">Register</a>
+                        <a routerLink="/job_provider_register" class="text-purple-700 hover:underline">Register</a>
                     </p>
                 </div>
             </form>
