--- a/src/app/pages/job_provider/auth/register/register.component.html
+++ b/src/app/pages/job_provider/auth/register/register.component.html
@@ -79,7 +79,7 @@
         </form>
         <!-- Existing Login Link -->
         <p class="text-center text-gray-600 text-sm mt-2">
-            Already have an account? <a href="/login" class="text-blue-500 underline">Login</a>
+            Already have an account? <a href="/job_provider_login" class="text-blue-500 underline">Login</a>
         </p>
     </div>
     
