--- a/src/app/pages/job_provider/applications/applications.component.html
+++ b/src/app/pages/job_provider/applications/applications.component.html
@@ -11,9 +11,9 @@
       <!-- User Info -->
       <div class="flex items-center space-x-4">
         <span class="text-purple-700 font-medium">Abhishek</span>
-        <button class="bg-orange-500 text-white px-4 py-2 rounded-md font-semibold hover:bg-orange-600">
+        <button (click)="logout()" class="bg-orange-500 text-white px-4 py-2 rounded-md font-semibold hover:bg-orange-600">
           Logout
-        </button>
+      </button>
       </div>
     </div>
   </header>
