--- a/src/app/pages/job_provider/provider-chat/provider-chat.component.html
+++ b/src/app/pages/job_provider/provider-chat/provider-chat.component.html
@@ -3,21 +3,21 @@
   <!-- Message List -->
   <div class="message-list h-96 overflow-y-auto mb-4 p-4 bg-white rounded-lg shadow-inner">
     <div *ngFor="let message of messages" class="message my-2 flex">
-      <!-- Current User's Message (Align Right) -->
       <div 
-        *ngIf="message.receiver_id === receiverId" 
+        *ngIf="message.sender_id === user_id" 
         class="ml-auto p-2 rounded-lg max-w-xs bg-blue-500 text-white shadow">
         <p class="text-sm font-semibold">You:</p>
         <p>{{ message.content }}</p>
       </div>
-      
+
       <!-- Receiver's Message (Align Left) -->
       <div 
-        *ngIf="message.receiver_id !== receiverId" 
+        *ngIf="message.sender_id !== user_id" 
         class="mr-auto p-2 rounded-lg max-w-xs bg-gray-300 text-gray-800 shadow">
         <p class="text-sm font-semibold">Other:</p>
         <p>{{ message.content }}</p>
       </div>
+
     </div>
   </div>
 
