--- a/src/app/pages/job_provider/home/home/home.component.html
+++ b/src/app/pages/job_provider/home/home/home.component.html
@@ -37,40 +37,34 @@
 
             <!-- Job Cards -->
             <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
-
-                <div *ngFor="let job of jobs">
-                    <!-- Job Card -->
-                    <div class="bg-white p-6 rounded-lg shadow-lg transition-transform transform hover:scale-105">
-                      <h2 class="text-xl font-semibold text-gray-800">{{ job.title }}</h2>
-                      <p class="mt-2 text-sm text-gray-600"><strong>Job Mode:</strong> {{ job.job_mode}}</p>
-                      <p class="text-sm text-gray-600"><strong>Location:</strong> {{ job.job_location }}</p>
-                      <p class="text-sm text-gray-600"><strong>Job Type:</strong> {{ job.job_type }}</p>
-                      <p class="text-sm text-gray-600"><strong>Salary:</strong> ₹{{ job.salary_from }} - ₹{{ job.salary_to }}</p>
-                      <div class="flex space-x-2 mt-2">
-                        <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">Python</span>
-                        <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">Django</span>
-                        <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">React</span>
+                <div *ngFor="let job of jobs | paginate: { itemsPerPage: 5, currentPage: currentPage }">
+                  <!-- Job Card -->
+                  <div class="bg-white p-6 rounded-lg shadow-lg transition-transform transform hover:scale-105">
+                    <h2 class="text-xl font-semibold text-gray-800">{{ job.title }}</h2>
+                    <p class="mt-2 text-sm text-gray-600"><strong>Job Mode:</strong> {{ job.job_mode }}</p>
+                    <p class="text-sm text-gray-600"><strong>Location:</strong> {{ job.job_location }}</p>
+                    <p class="text-sm text-gray-600"><strong>Job Type:</strong> {{ job.job_type }}</p>
+                    <p class="text-sm text-gray-600"><strong>Salary:</strong> ₹{{ job.salary_from }} - ₹{{ job.salary_to }}</p>
+                    <div class="flex space-x-2 mt-2">
+                      <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">Python</span>
+                      <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">Django</span>
+                      <span class="bg-gray-900 text-white py-1 px-3 rounded-full text-sm">React</span>
                     </div>
-                      <p class="mt-2 text-sm text-gray-600"><strong>Experience:</strong> {{ job.experience }}</p>
-                      <p class="text-sm text-gray-600"><strong>Posted on:</strong> {{ job.created_at | date:'dd/MM/yyyy' }}</p>
-                      <div class="flex justify-end space-x-2 mt-4">
-                        <button 
-                            class="bg-orange-500 text-white py-1 px-4 rounded hover:bg-orange-600" 
-                            [routerLink]="['/edit-job', job.job_id]">
-                            Edit
-                        </button>
-                        
-                        <button 
-                          class="bg-red-500 text-white py-1 px-4 rounded hover:bg-red-600" 
-                          routerLink="/close">
-                          Close
-                        </button>
-                      </div>
-                      
+                    <p class="mt-2 text-sm text-gray-600"><strong>Experience:</strong> {{ job.experience }}</p>
+                    <p class="text-sm text-gray-600"><strong>Posted on:</strong> {{ job.created_at | date:'dd/MM/yyyy' }}</p>
+                    <div class="flex justify-end space-x-2 mt-4">
+                      <button class="bg-orange-500 text-white py-1 px-4 rounded hover:bg-orange-600" [routerLink]="['/edit-job', job.job_id]">Edit</button>
+                      <button class="bg-red-500 text-white py-1 px-4 rounded hover:bg-red-600" routerLink="/close">Close</button>
                     </div>
-                </div>                  
-            </div>
+                  </div>
+                </div>
+              </div>
+              <br>
+              <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+              <!-- Pagination Controls -->
+              
         </div>
+        
     </div>
 
 </body>
